--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                                 </div>
                                 <div data-tilt class="text-center mt-2" data-tilt>
                                     <a class="inner-route" target="_blank" aria-label="Download"
-                                        href="/downloads/3dAssetCard.zip" download="3dAssetCard.zip">Download</a>
+                                        href="/zipper-files/" download="3dAssetCard.zip">Download</a>
                                 </div>
                                 <div data-tilt class="text-center mt-2 mb-2" data-tilt>
                                     <a class="inner-route2" target="_blank" aria-label="Created By"
