--- a/index.html
+++ b/index.html
@@ -183,7 +183,160 @@
                                 </div>
                                 <div data-tilt class="text-center mt-2" data-tilt>
                                     <a class="inner-route" target="_blank" aria-label="Download"
-                                        href="/zipper-files/" download="3dAssetCard.zip">Download</a>
+                                        href="zipper-files/3dCube.zip" download="3dCube.zip">Download Zip</a>
+                                </div>
+                                <div data-tilt class="text-center mt-2 mb-2" data-tilt>
+                                    <a class="inner-route2" target="_blank" aria-label="Created By"
+                                        href="https://codepen.io/DawidKrajewski">Visit Creator</a>
+                                </div>
+                            </span>
+                        </div>
+                    </div>
+
+
+
+                    <div class="col-md-3 col-sm-12 col-lg-3">
+                        <div class="card-wrapper text-center">
+                            <span class="card-route" target="_blank" href="pens/RotateClockCssOnlyNowJS/index.html">
+
+                                <div id="videoContainer1" class="video-container"
+                                    onmouseover="startAnimation('videoContainer1')">
+                                    <div class="overlay" id="overlay">
+                                        <img src="https://miro.medium.com/v2/resize:fit:1400/1*xjl3U-PlELfH8i2IlfwLJA.jpeg"
+                                            alt="Screenshot" class="screenshot">
+                                    </div>
+                                    <video muted loop id="video">
+                                        <source
+                                            src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
+                                            type="video/mp4">
+                                        Your browser does not support the video tag.
+                                    </video>
+                                </div>
+
+                                <h4 class="card-text">TEST VIDEO</h4>
+                                <div data-tilt class="text-center mt-2" data-tilt>
+                                    <a class="inner-route" target="_blank" aria-label="Demo"
+                                        href="pens/RotateClockCssOnlyNowJS/index.html">Demo</a>
+                                </div>
+                                <div data-tilt class="text-center mt-2" data-tilt>
+                                    <a class="inner-route" target="_blank" aria-label="Download"
+                                        href="zipper-files/3dIconHover.zip" download="3dIconHover.zip">Download Zip</a>
+                                </div>
+                                <div data-tilt class="text-center mt-2 mb-2" data-tilt>
+                                    <a class="inner-route2" target="_blank" aria-label="Created By"
+                                        href="https://codepen.io/DawidKrajewski">Visit Creator</a>
+                                </div>
+                            </span>
+                        </div>
+                    </div>
+
+
+
+
+
+                    <div class="col-md-3 col-sm-12 col-lg-3">
+                        <div class="card-wrapper text-center">
+                            <span class="card-route" target="_blank" href="pens/RotateClockCssOnlyNowJS/index.html">
+
+                                <div id="videoContainer1" class="video-container"
+                                    onmouseover="startAnimation('videoContainer1')">
+                                    <div class="overlay" id="overlay">
+                                        <img src="https://miro.medium.com/v2/resize:fit:1400/1*xjl3U-PlELfH8i2IlfwLJA.jpeg"
+                                            alt="Screenshot" class="screenshot">
+                                    </div>
+                                    <video muted loop id="video">
+                                        <source
+                                            src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
+                                            type="video/mp4">
+                                        Your browser does not support the video tag.
+                                    </video>
+                                </div>
+
+                                <h4 class="card-text">TEST VIDEO</h4>
+                                <div data-tilt class="text-center mt-2" data-tilt>
+                                    <a class="inner-route" target="_blank" aria-label="Demo"
+                                        href="pens/RotateClockCssOnlyNowJS/index.html">Demo</a>
+                                </div>
+                                <div data-tilt class="text-center mt-2" data-tilt>
+                                    <a class="inner-route" target="_blank" aria-label="Download"
+                                        href="zipper-files/3dTextCss.zip" download="3dTextCss.zip">Download Zip</a>
+                                </div>
+                                <div data-tilt class="text-center mt-2 mb-2" data-tilt>
+                                    <a class="inner-route2" target="_blank" aria-label="Created By"
+                                        href="https://codepen.io/DawidKrajewski">Visit Creator</a>
+                                </div>
+                            </span>
+                        </div>
+                    </div>
+
+
+
+
+
+                    <div class="col-md-3 col-sm-12 col-lg-3">
+                        <div class="card-wrapper text-center">
+                            <span class="card-route" target="_blank" href="pens/RotateClockCssOnlyNowJS/index.html">
+
+                                <div id="videoContainer1" class="video-container"
+                                    onmouseover="startAnimation('videoContainer1')">
+                                    <div class="overlay" id="overlay">
+                                        <img src="https://miro.medium.com/v2/resize:fit:1400/1*xjl3U-PlELfH8i2IlfwLJA.jpeg"
+                                            alt="Screenshot" class="screenshot">
+                                    </div>
+                                    <video muted loop id="video">
+                                        <source
+                                            src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
+                                            type="video/mp4">
+                                        Your browser does not support the video tag.
+                                    </video>
+                                </div>
+
+                                <h4 class="card-text">TEST VIDEO</h4>
+                                <div data-tilt class="text-center mt-2" data-tilt>
+                                    <a class="inner-route" target="_blank" aria-label="Demo"
+                                        href="pens/RotateClockCssOnlyNowJS/index.html">Demo</a>
+                                </div>
+                                <div data-tilt class="text-center mt-2" data-tilt>
+                                    <a class="inner-route" target="_blank" aria-label="Download"
+                                        href="zipper-files/ButtonHover.zip" download="ButtonHover.zip">Download Zip</a>
+                                </div>
+                                <div data-tilt class="text-center mt-2 mb-2" data-tilt>
+                                    <a class="inner-route2" target="_blank" aria-label="Created By"
+                                        href="https://codepen.io/DawidKrajewski">Visit Creator</a>
+                                </div>
+                            </span>
+                        </div>
+                    </div>
+
+
+
+
+                    <div class="col-md-3 col-sm-12 col-lg-3">
+                        <div class="card-wrapper text-center">
+                            <span class="card-route" target="_blank" href="pens/RotateClockCssOnlyNowJS/index.html">
+
+                                <div id="videoContainer1" class="video-container"
+                                    onmouseover="startAnimation('videoContainer1')">
+                                    <div class="overlay" id="overlay">
+                                        <img src="https://miro.medium.com/v2/resize:fit:1400/1*xjl3U-PlELfH8i2IlfwLJA.jpeg"
+                                            alt="Screenshot" class="screenshot">
+                                    </div>
+                                    <video muted loop id="video">
+                                        <source
+                                            src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
+                                            type="video/mp4">
+                                        Your browser does not support the video tag.
+                                    </video>
+                                </div>
+
+                                <h4 class="card-text">TEST VIDEO</h4>
+                                <div data-tilt class="text-center mt-2" data-tilt>
+                                    <a class="inner-route" target="_blank" aria-label="Demo"
+                                        href="pens/RotateClockCssOnlyNowJS/index.html">Demo</a>
+                                </div>
+                                <div data-tilt class="text-center mt-2" data-tilt>
+                                    <a class="inner-route" target="_blank" aria-label="Download"
+                                        href="zipper-files/FakeHacking.zip" download="FakeHackingTest.zip">Download Zip</a>
                                 </div>
                                 <div data-tilt class="text-center mt-2 mb-2" data-tilt>
                                     <a class="inner-route2" target="_blank" aria-label="Created By"
