--- a/index.html
+++ b/index.html
@@ -172,17 +172,25 @@
                                 observer.observe(container);
                             });
 
-                            let tempArray = [
-                                {
-                                    "name": "umair",
-                                },
-                                {
-                                    "name": "sajid",
-                                },
-                                {
-                                    "name": "wahab",
-                                }
-                            ]
+                            let tempArray = [];
+                            //WE CAN DYNAMICALLY RENDER THIS JSON BUT HAVE TO WORK ON API 
+                            //test
+                            const urltest = 'https://umair-ali-bhutto.github.io/codepen/test.json';
+                            fetch(urltest)
+                                .then(response => {
+                                    if (!response.ok) {
+                                        throw new Error('Network response was not ok');
+                                    }
+                                    return response.json();
+                                })
+                                .then(data => {
+                                    console.log(data);
+                                    tempArray = data;
+                                })
+                                .catch(error => {
+                                    console.error('There was a problem with the fetch operation:', error);
+                                });
+
                             tempArray.forEach((element, index) => {
                                 createCardTest(element, index);
                             });
@@ -1718,21 +1726,8 @@
         //     console.error('There was a problem with the fetch operation:', error);
         //   });
 
-        //test
-        const apiUrltest = 'http://172.191.1.223:3000/test';
-        fetch(apiUrl)
-          .then(response => {
-            if (!response.ok) {
-              throw new Error('Network response was not ok');
-            }
-            return response.json();
-          })
-          .then(data => {
-            console.log(data);
-          })
-          .catch(error => {
-            console.error('There was a problem with the fetch operation:', error);
-          });
+
+
 
 
     </script>
